; ModuleID = '/home/carl/AnghaBench/curl/tests/libtest/extr_lib1550.c_test.c'
source_filename = "/home/carl/AnghaBench/curl/tests/libtest/extr_lib1550.c_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURLE_OK = common dso_local global i32 0, align 4
@test.bl_servers = internal constant [3 x i8*] [i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i32 0, i32 0), i8* null], align 16
@.str = private unnamed_addr constant [18 x i8] c"Microsoft-IIS/6.0\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"nginx/0.8.54\00", align 1
@test.bl_sites = internal constant [3 x i8*] [i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i32 0, i32 0), i8* null], align 16
@.str.2 = private unnamed_addr constant [17 x i8] c"curl.haxx.se:443\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"example.com:80\00", align 1
@CURL_GLOBAL_ALL = common dso_local global i32 0, align 4
@CURLMOPT_PIPELINING_SERVER_BL = common dso_local global i32 0, align 4
@CURLMOPT_PIPELINING_SITE_BL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @test(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i32, i32* @CURLE_OK, align 4
  store i32 %5, i32* %4, align 4
  %6 = load i32, i32* @CURL_GLOBAL_ALL, align 4
  %7 = call i32 @global_init(i32 %6)
  %8 = call i32* (...) @curl_multi_init()
  store i32* %8, i32** %3, align 8
  %9 = load i8*, i8** %2, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* @CURLMOPT_PIPELINING_SERVER_BL, align 4
  %12 = call i32 @curl_multi_setopt(i32* %10, i32 %11, i8** getelementptr inbounds ([3 x i8*], [3 x i8*]* @test.bl_servers, i64 0, i64 0))
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @CURLMOPT_PIPELINING_SITE_BL, align 4
  %15 = call i32 @curl_multi_setopt(i32* %13, i32 %14, i8** getelementptr inbounds ([3 x i8*], [3 x i8*]* @test.bl_sites, i64 0, i64 0))
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @curl_multi_cleanup(i32* %16)
  %18 = call i32 (...) @curl_global_cleanup()
  ret i32 0
}

declare dso_local i32 @global_init(i32) #1

declare dso_local i32* @curl_multi_init(...) #1

declare dso_local i32 @curl_multi_setopt(i32*, i32, i8**) #1

declare dso_local i32 @curl_multi_cleanup(i32*) #1

declare dso_local i32 @curl_global_cleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
